deploy: bf9c1d07afc67072151e177aab4b0dd7cc332595

--- a/toc.html
+++ b/toc.html
@@ -13,6 +13,9 @@
 
           <ul class="nav level1">
                 <li>
+                    <a href="index.html" name="" title="Home">Home</a>
+                </li>
+                <li>
                     <a href="api/Extism.Sdk.html" name="api/toc.html" title="API">API</a>
                 </li>
           </ul>
