--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <meta name="docfx:rel" content="">
       
       
-      <meta name="docfx:docurl" content="https://github.com/extism/dotnet-sdk/blob/fix/docs-publish-dir-1/index.md/#L1">
+      <meta name="docfx:docurl" content="https://github.com/extism/dotnet-sdk/blob/v1.0.1/index.md/#L1">
       <meta name="loc:inThisArticle" content="In this article">
       <meta name="loc:searchResultsCount" content="{count} results for &quot;{query}&quot;">
       <meta name="loc:searchNoResults" content="No results for &quot;{query}&quot;">
@@ -87,17 +87,14 @@
 <h1 id="extism-net-host-sdk">Extism .NET Host SDK</h1>
 
 <p>This repo houses the .NET SDK for integrating with the <a href="https://extism.org/">Extism</a> runtime. Install this library into your host .NET applications to run Extism plugins.</p>
-<blockquote>
-<p><strong>Note</strong>: This houses the 1.0 pre-release version of the .NET SDK. We may push breaking changes in new versions until will hit 1.0 in December, 2023. But it's currently the best place to start a new integration and we welcome any feedback.</p>
-</blockquote>
 <h2 id="installation">Installation</h2>
 <p>This library depends on the native Extism runtime, we provide <a href="https://www.nuget.org/packages/Extism.runtime.all">native runtime packages</a> for all supported operating systems. You can install with:
 <img src="https://img.shields.io/nuget/vpre/Extism.runtime.all"></p>
-<pre><code>dotnet add package Extism.runtime.all --prerelease
+<pre><code>dotnet add package Extism.runtime.all
 </code></pre>
 <p>Then, add the <a href="https://www.nuget.org/packages/Extism.Sdk">Extism.Sdk NuGet package</a> to your project:
 <img src="https://img.shields.io/nuget/vpre/Extism.Sdk"></p>
-<pre><code>dotnet add package Extism.Sdk --prerelease
+<pre><code>dotnet add package Extism.Sdk
 </code></pre>
 <h2 id="getting-started">Getting Started</h2>
 <p>This guide should walk you through some of the concepts in Extism and this .NET library.</p>
@@ -318,7 +315,7 @@ printfn &quot;%s&quot; output2
 </article>
 
         <div class="contribution d-print-none">
-          <a href="https://github.com/extism/dotnet-sdk/blob/fix/docs-publish-dir-1/index.md/#L1" class="edit-link">Edit this page</a>
+          <a href="https://github.com/extism/dotnet-sdk/blob/v1.0.1/index.md/#L1" class="edit-link">Edit this page</a>
         </div>
 
         <div class="next-article d-print-none border-top" id="nextArticle"></div>
